--- a/pom.xml
+++ b/pom.xml
@@ -149,7 +149,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>es.deusto.spq.Main</mainClass>
+					<mainClass>es.deusto.spq.main</mainClass>
 				</configuration>
 			</plugin>
 
