--- a/pom.xml
+++ b/pom.xml
@@ -44,15 +44,23 @@
 		
 		<dependency>
 			<groupId>org.glassfish.jersey.media</groupId>
-			<artifactId>jersey-media-json-binding</artifactId>
+	<artifactId>jersey-media-json-binding</artifactId>
 		</dependency>
 		
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
-			<scope>test</scope>
-		</dependency>
+
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.7</version>
+		<scope>test</scope>
+	</dependency>
+
+	<dependency> 
+		<groupId>org.databene</groupId>
+		<artifactId>contiperf</artifactId>
+		<version>2.0.0</version>
+		<scope>test</scope>
+	</dependency>
 
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
