--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
 	<properties>
 		<jersey.version>2.30.1</jersey.version>
-		<config.files.dir>${basedir}/src/main/java/es/deusto/spq/resources</config.files.dir>
+		<config.files.dir>${basedir}/src/main/resources</config.files.dir>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -163,7 +163,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<mainClass>es.deusto.spq.main</mainClass>
+					<mainClass>es.deusto.spq.main.main</mainClass>
 				</configuration>
 			</plugin>
 
