--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<name>proyecto-spq</name>
 	<!-- FIXME change it to the project's website -->
-	<url>http://www.example.com</url>
+	<url>http://www.gestion_biblioteca.com</url>
 
 	<properties>
 		<jersey.version>2.30.1</jersey.version>
