--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,18 @@
 language: java
+jdk:
+  - openjdk8
+os: linux
+services:
+  - mysql
+script: 
+  - mvn test -DargLine="-Dcontiperf.active=false
+  - "mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V"
+  - "mvn test -B"
+notifications: 
+  email: 
+    on_failure: never
+    on_success: never
+    recipients: 
+      - joblaca@opendeusto.es
+      - victorugarte24@opendeusto.es
+      - sergiocogollos@opendeusto.es
