--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
   - mysql
 before_script:
   - mysql -u root -e 'CREATE DATABASE gestion_biblioteca_db;'
-  - mysql -u root -e "CREATE USER 'root'@'localhost' IDENTIFIED BY 'root';"
+  - mysql -u root -e "CREATE USER 'root'@'localhost' IDENTIFIED BY 'admin';"
   - mysql -u root -e "GRANT ALL ON gestion_biblioteca_db.* TO 'root'@'localhost';
 script: 
   - mvn test -DargLine="-Dcontiperf.active=false"
