--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: java
 
 services:
   - xfvb
+  - mysql
 before_script:
   - mysql -u root -e 'CREATE DATABASE gestion_biblioteca_db;'
   - mysql -u root -e "CREATE USER 'root'@'localhost' IDENTIFIED BY 'root';"
