--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,12 @@ language: java
 services:
   - xfvb
   - mysql
-
+addons:
+  apt:
+    packages:
+    - mysql-server-5.6
+    - mysql-client-core-5.6
+    - mysql-client-5.6
 before_script:
   - mysql -u root -e 'CREATE DATABASE gestion_biblioteca_db;'
   - mysql -u root -e "CREATE USER 'root'@'localhost' IDENTIFIED BY 'root';"
