--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: java
 services:
   - xfvb
   - mysql
-
+script: 
+  - mvn test -DargLine="-Dcontiperf.active=false"
+  - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
+  - mvn test -B
   
 
