--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: java
-
 services:
   - xfvb
   - mysql
+before_script:
+  - mysql -u root -e 'CREATE DATABASE gestion_biblioteca_db;'
+  - mysql -u root -e "CREATE USER 'root'@'localhost' IDENTIFIED BY 'root';"
+  - mysql -u root -e "GRANT ALL ON gestion_biblioteca_db.* TO 'root'@'localhost';
 script: 
   - mvn test -DargLine="-Dcontiperf.active=false"
   - mvn install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
   - mvn test -B
-  
-
