--- a/pom.xml
+++ b/pom.xml
@@ -138,20 +138,30 @@
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>3.0.0</version>
 			</plugin>
+
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.7</version>
 			</plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.22.0</version>
+				<version>2.20</version>
+				<configuration>
+					<!-- Force alphabetical order to have a reproducible build -->
+					<runOrder>alphabetical</runOrder>
+					<useSystemClassLoader>false</useSystemClassLoader>
+					<testFailureIgnore>true</testFailureIgnore>
+					<threadCount>1</threadCount>
+				</configuration>
 			</plugin>
+
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.8.2</version>
+				<version>0.8.5</version>
 				<executions>
 					<execution>
 						<goals>
@@ -165,6 +175,13 @@
 						<goals>
 							<goal>report</goal>
 						</goals>
+						<configuration>
+                			<excludes>
+                    			<exclude>es/deusto/spq/ventanas/*</exclude>
+                    			<exclude>es/deusto/spq/utils/*</exclude>
+                    			<exclude>es/deusto/spq/main/*</exclude>
+                			</excludes>
+            			</configuration>
 					</execution>
 				</executions>
 			</plugin>
