--- a/pom.xml
+++ b/pom.xml
@@ -119,15 +119,18 @@
 					</descriptors>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>3.0.0</version>
-				<configuration>
-					<show>private</show>
-					<nohelp>true</nohelp>
-				</configuration>
-			</plugin>
+			
+			   <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <show>private</show>
+                    <nohelp>true</nohelp>
+                    <reportOutputDirectory>${basedir}/doc</reportOutputDirectory>
+                </configuration>
+            </plugin>
+
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-site-plugin</artifactId>
@@ -176,12 +179,12 @@
 							<goal>report</goal>
 						</goals>
 						<configuration>
-                			<excludes>
-                    			<exclude>es/deusto/spq/ventanas/*</exclude>
-                    			<exclude>es/deusto/spq/utils/*</exclude>
-                    			<exclude>es/deusto/spq/main/*</exclude>
-                			</excludes>
-            			</configuration>
+							<excludes>
+								<exclude>es/deusto/spq/ventanas/*</exclude>
+								<exclude>es/deusto/spq/utils/*</exclude>
+								<exclude>es/deusto/spq/main/*</exclude>
+							</excludes>
+						</configuration>
 					</execution>
 				</executions>
 			</plugin>
