javadoc en site

--- a/pom.xml
+++ b/pom.xml
@@ -191,5 +191,19 @@
 
 		</plugins>
 	</build>
-
+	
+	
+  <reporting>
+	<plugins>
+	  <plugin>
+		<groupId>org.apache.maven.plugins</groupId>
+		<artifactId>maven-javadoc-plugin</artifactId>
+		<version>3.2.0</version>
+		<configuration>
+		  <stylesheetfile>${basedir}/doc/stylesheet.css</stylesheetfile>
+		  <show>public</show>
+		</configuration>
+	  </plugin>
+	</plugins>
+  </reporting>
 </project>
